--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 23 15:55:55 COT 2017
-ndk.dir=C\:\\Users\\glarab\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\glarab\\AppData\\Local\\Android\\Sdk
+#Fri Feb 24 16:30:07 COT 2017
+sdk.dir=C\:\\Users\\icaceres\\AppData\\Local\\Android\\Sdk
