--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,16 +26,19 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
     compile 'de.greenrobot:greendao:2.1.0'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+
+    compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.android.support:support-v4:25.1.1'
-    testCompile 'junit:junit:4.12'
 
+    testCompile 'junit:junit:4.12'
 }
