--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,11 @@ buildscript {
 }
 
 allprojects {
+
     repositories {
+
         maven { url "http://dl.bintray.com/populov/maven" }
+        mavenCentral()
         jcenter()
     }
 }
