Commit mapas paraderos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,8 @@
 
         <activity android:name=".view.activity.UsuarioActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-
+        <activity android:name=".view.activity.DetalleEstacionActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
     </application>
 
