--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,9 @@ dependencies {
     })
 
 
-
+    compile 'com.android.support:support-compat:25.1.1'
+    compile 'com.daimajia.easing:library:2.0@aar'
+    compile 'com.daimajia.androidanimations:library:2.2@aar'
 
     compile 'de.greenrobot:greendao:2.1.0'
     compile 'com.android.support:appcompat-v7:25.1.1'
