--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 03 17:57:26 COT 2017
-ndk.dir=C\:\\Users\\glarab\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\glarab\\AppData\\Local\\Android\\Sdk
+#Fri Mar 03 23:50:13 COT 2017
+ndk.dir=D\:\\sdk\\ndk-bundle
+sdk.dir=D\:\\sdk
