--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,18 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.google.android.gms:play-services:10.0.1'
+//    compile 'com.google.android.gms:play-services:10.0.1'
+
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services-places:10.0.1'
+//    compile 'com.google.android.gms:play-services-appindexing:10.0.1'
+    compile 'com.google.firebase:firebase-appindexing:10.0.1'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-crash:10.0.1'
+
+
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
@@ -46,3 +57,4 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.1'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
