--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,22 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- Firebase Cloud Messaging - Configuration. -->
+        <service android:name=".remote.FcmMessageHandler"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".remote.FcmIDListenerService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+        <!-- Firebase Cloud Messaging - Configuration. -->
+
+
         <activity
             android:name=".view.activity.MainActivity"
             android:label="@string/title_activity_main"
@@ -22,8 +38,6 @@
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
 
@@ -94,6 +108,7 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".view.activity.DenunciarActivity"></activity>
+
     </application>
 
 </manifest>
