--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 04 11:28:45 COT 2017
-ndk.dir=C\:\\Users\\glarab\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\glarab\\AppData\\Local\\Android\\Sdk
+#Sat Mar 04 12:16:31 COT 2017
+ndk.dir=D\:\\sdk\\ndk-bundle
+sdk.dir=D\:\\sdk
